# BIDSTOOLS

./: README.md  ai-agent-prompts-short.md  ai-agent-prompts.md  ai-developer-briefs.md  ai-development-delivery-plan.md  build-native-plugin.cmd  cadtools-calculation-model.md  dimension-toolbar-plan.md  illustrator-plugin-feasibility-plan.md  illustrator-plugin-internal-release-strategy.md  illustrator-plugin-mvp-spec.md  native-dimension-tools-architecture-plan.md  native-dimension-tools-implementation-backlog.md  prompt-implement-selection-event-plugin.md  selection-event-hybrid-architecture-plan.md
Adobe Illustrator 2026 SDK/: ReadMe.txt  Version.txt
Adobe Illustrator 2026 SDK/illustratorapi/ate/: ATEDOM.xml  ATEException.h  ATESuites.h  ATETextSuitesDeclare.h  (+9 more)
installer/: README.md
native/: README.md
native-plugin/: CMakeLists.txt  README.md
native-plugin/include/: BIDSTOOLSCEPDispatcher.h  BIDSTOOLSSelectionNotifierPlugin.h  BIDSTOOLSSelectionSignature.h
native-plugin/src/: BIDSTOOLSCEPDispatcher.cpp  BIDSTOOLSSelectionNotifierPlugin.cpp  BIDSTOOLSSelectionSignature.cpp  PluginMain.cpp
plugin/: .debug
plugin/CSXS/: manifest.xml
plugin/client/: bridge.js  cadtracker.html  cadtracker.js  dimensions.html  dimensions.js  index.html  index.js  scale.html  scale.js  settings-store.js  state.js  styles.css
plugin/docs/: DEVELOPMENT.md  DEV_SETUP.md
plugin/host/: bootstrap.jsx  index.jsx
plugin/shared/: panel-settings.json
releases/: README.md
scripts/: README.md  build-native-plugin.ps1  setup-illustrator-cep-dev.ps1
tests/manual/: README.md
(+472 files in other folders)
